added assests and content

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,3 +11,4 @@ Using online shopping methods, consumers do not need to consume energy by physic
 visiting physical stores. This way they save time and the cost of travelling. A retailer 
 or a shop is a business that presents a selection of goods and offers to trade or sell 
 them to customers for money or other goods.</p>
+<app-card></app-card>
