--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <p>{{visiblePosts}}</p>
     <ul>
-        <li *ngFor=" let post of (visiblePosts)" >
+        <li *ngFor=" let post of (posts)" >
+          <p>1</p>
       </li>
     </ul>
 </div>
