--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<p>Shopping is an activity in which a customer browses the available goods or services presented by one or more retailers with the potential intent to purchase a suitable selection of them. A typology of shopper types has been developed by 
+<p class="intro">Shopping is an activity in which a customer browses the available goods or services presented by one or more retailers with the potential intent to purchase a suitable selection of them. A typology of shopper types has been developed by 
 scholars which identifies one group of shoppers as recreational shoppers,
 that is, those who enjoy shopping and view it as a leisure activity.
 Online shopping has become a major disruptor in the retail industry as consumers 
