--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,7 +8,7 @@
 
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="text" [(ngModel)]="password" class="form-control" name="password">
+        <input type="password" [(ngModel)]="password" class="form-control" name="password">
       </div>
 
       <button type="submit" class="btn btn-success">Submit</button>
