cards on home page

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,7 +1,12 @@
 <div class="container">
-    <ul>
+    <ul class = "thumbnailList">
         <li *ngFor=" let post of (posts)" >
-          <p>1</p>
+          <div class="card">
+            <img src="{{post.src}}" alt="Avatar" style="width:100%">
+            <div class="container">
+              <h4><b>{{post.category}}</b></h4>
+            </div>
+          </div>
       </li>
     </ul>
 </div>
