--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -13,3 +13,9 @@
   .container {
     padding: 2px 16px;
   }
+  
+  ul { padding:0; width:1200px; margin:20px auto}
+   
+  li{
+    margin: 12px;
+  }
