--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -2,6 +2,7 @@
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    background-color: white;
   }
   
   /* On mouse-over, add a deeper shadow */
@@ -14,8 +15,10 @@
     padding: 2px 16px;
   }
   
-  ul { padding:0; width:1200px; margin:20px auto}
    
   li{
+    list-style-type: none;
     margin: 12px;
+    display: inline-flex;
+    justify-content: space-between;
   }
