--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -2,7 +2,7 @@
     <ul class = "thumbnailList">
         <li *ngFor=" let post of (posts)" >
           <button class="card">
-            <img src="{{post.src}}" alt="Avatar" style="width:100%">
+            <img src="{{post.src}}" >
             <div class="container">
               <h4><b>{{post.category}}</b></h4>
             </div>
