--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,6 @@
 <header class = "header">
     <h1> Shopping Guide!!</h1>
+    <div>
+        <button (click) = "logout()">Logout</button>
+    </div>
 </header>
