--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class = "header">
     <h1> Shopping Guide!!</h1>
-    <div>
+    <div class="logout-btn">
         <button (click) = "logout()">Logout</button>
     </div>
 </header>
