--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,33 +1,43 @@
+.intro, .homepage-container{
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
 .intro{
-    line-height: 2.0;
-    margin-top: 100px;
-    font-size: large;
-    font-family: cursive; 
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  line-height: 2.0;
+  font-size: large;
+  font-family: cursive; 
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    background-color: white;
-  }
-  
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
-  .homepage-container {
-    padding: 2px 16px;
-  }
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  background-color: white;
+  padding: 0px;
+}
 
-  /* .thumbnailList {
-    display: flex;
-    flex: 1;
-  }  */
-   
-  li{
-    list-style-type: none;
-    display: inline-flex;
-    justify-content: space-around;
-    padding: 2%;
-  }
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
 
+.container {
+  padding: 2px 16px;
+  display: flex;
+  flex: 1;
+}
+
+.image {
+width: 800px;
+height: 500px;
+}
+ 
+li{
+  object-fit: contain;
+  list-style-type: none;
+  margin: 12px;
+  display: inline-flex;
+  justify-content: space-around;
+}
