--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,6 +13,6 @@
         <label for="password">Password</label>
         <input type="password" [(ngModel)]="password" class="form-control" name="password">
       </div>
-      <button type="submit" class="btn btn-success">Submit</button>
+      <button type="submit" class="submit-btn">Submit</button>
     </form>
 </div>
