--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,4 @@
 <header class = "header">
     <h1> Shopping Guide!!</h1>
-    <div class="logout-btn">
-        <button (click) = "logout()">Logout</button>
-    </div>
+    <button class="logout-btn" (click) = "logout()">Logout</button>
 </header>
