--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -15,7 +15,7 @@
 }
 
 .form-control{
-    padding: 2%;
+    padding: 15px;
 }
 
 label{
@@ -27,10 +27,12 @@ label{
 .submit-btn{
   background-color: #4CAF50;
   color: white;
-  padding: 2.7%;
-  margin-left : 2%;
-  margin-top: 2%;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 25px;
+  padding-left: 25px;
+  margin-left : 10px;
+  margin-top: 10px;
   border: none;
   border-radius: 4px;
-  cursor: pointer;
 }
