fixed padding for eader

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <header class = "header">
-    <h1> Shopping Guide!!</h1>
+    <h1> Shopping Guide</h1>
     <button class="logout-btn" (click) = "logout()">Logout</button>
 </header>
