--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: flex-start;
   line-height: 2.0;
-  padding-top: 3.5%;
+  padding-top: 65px;
   font-size: large;
   font-family: cursive; 
 }
