--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,13 +1,15 @@
 .header {
   display: inline-flex;
   justify-content: space-between;
-  padding: 0.5%;
+  padding: 3px;
   background: #555;
-  color: #f1f1f1;
+  color: #ffffff;
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
+  padding-right: 2%;
+  padding-left: 2%;
   }
 
 .logout-btn {
@@ -16,6 +18,6 @@
   border: none;
   background-color: #555;
   border: none;
-  color: #f1f1f1;
+  color: #ffffff;
   font-size: 150%;
 }
